--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-webp-webpack-plugin": "^3.3.3",
     "imagemin-webpack-plugin": "^2.4.2",
-    "scroll-lock": "^2.1.4"
+    "plyr": "^3.6.12",
+    "scroll-lock": "^2.1.4",
+    "swiper": "6.6.2"
   },
   "husky": {
     "hooks": {
